bk_ida/gccida/c2/copy_loop_body
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2246:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types unroll_type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2257:4: error: expected ';' after expression
rtx v17; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2257:5: error: use of undeclared identifier 'v17'
rtx v17; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2259:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2259:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2262:1: error: use of undeclared identifier 'induction_1'
induction_1 *v22; // rsi 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2262:14: error: use of undeclared identifier 'v22'
induction_1 *v22; // rsi 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2264:4: error: expected ';' after expression
rtx v24; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2264:5: error: use of undeclared identifier 'v24'
rtx v24; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2267:4: error: expected ';' after expression
rtx v27; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2267:5: error: use of undeclared identifier 'v27'
rtx v27; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2271:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2271:5: error: use of undeclared identifier 'v31'; did you mean 'v21'?
rtx v31; // rax 
    ^~~
    v21
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2261:9: note: 'v21' declared here
__int64 v21; // rdx 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2274:4: error: expected ';' after expression
rtx label_from_map; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2274:5: error: use of undeclared identifier 'label_from_map'; did you mean 'get_label_from_map'?
rtx label_from_map; // rax 
    ^~~~~~~~~~~~~~
    get_label_from_map
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/integrate.h:166:12: note: 'get_label_from_map' declared here
extern rtx get_label_from_map PARAMS ((struct inline_remap *, int));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2282:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2282:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2283:4: error: expected ';' after expression
rtx v43; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/unroll.c:2283:5: error: use of undeclared identifier 'v43'
rtx v43; // rcx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_body/src/obj/unroll.o] Error 1
